syntax = "proto3";

package calculator;

option go_package = "github.com/Clement-Jean/grpc-go-course/calculator/proto";

message CalculateRequest {
	int32 first_number = 1;
	int32 second_number =2;
}

message CalculateResponse {
	int32 result = 1;
}